# mcp-demo

./: README.md  pyproject.toml
src/: fast_api_mcp_demo.py  gemini_mcp_demo.py  mcp_server_demo.py
